--- a/task3/resources/fontsqstylesheet.css
+++ b/task3/resources/fontsqstylesheet.css
@@ -8,4 +8,12 @@
 
 }
 
-p { font-family: 'WebFont', Arial, sans-serif; }
+p {
+    font-family: 'a_futuraortoregular', Arial, sans-serif;
+}
+h2{
+    font-family: 'a_futuraortoregular', Arial, sans-serif;
+}
+h3{
+    font-family: 'a_futuraortoregular', Arial, sans-serif;
+}
