--- a/task7/styles/adapt-page.css
+++ b/task7/styles/adapt-page.css
@@ -12,7 +12,7 @@ html, body {
 
 .header_image {
     height: 300px;
-    width: 85%;
+    width: 100%;
 }
 
 .content{
@@ -20,42 +20,59 @@ html, body {
     margin-left: auto;
     max-width: 980px;
     min-width: 320px;
-    padding: 0px 50px 50px;
+    width: 85%;
     padding-bottom: 50px;
 }
 .text-header {
+    position: absolute;
+    left: 0px;
+    width: 100%;
     margin-top: -4px;
     background-color: darkgray;
     height: 150px;
-    width: 100%;
     text-align: center;
     font-size: x-large;
     line-height: 134px;
 }
 
 .news-block {
-    margin-top: 40px;
+    margin-top: 190px;
     text-align: center;
 }
 
 .news {
     position: relative;
     display: inline-block;
-    margin-right: 10px;
-    width: 150px;
-    height: 150px;
+    width: 222px;
+    height: 222px;
     background-color: ghostwhite;
 }
 
 .news-footer {
-    line-height: 30px;
+    font-size: initial;
+    line-height: 38px;
     text-align: center;
     color: ghostwhite;
     position: absolute;
     width: 100%;
     bottom: 0px;
-    height: 30px;
+    height: 40px;
     background-color: #68A4C4;
+}
+
+.news_last{
+    float: right;
+}
+
+.news_first{
+    float: left;
+}
+
+.news_second{
+    margin-right: 13px;
+}
+.news_third{
+    margin-left: 13px;
 }
 
 .text {
@@ -66,7 +83,7 @@ html, body {
 
 .footer {
     padding-left: 30px;
-    line-height: 30px;
+    line-height: 116px;
     color: ghostwhite;
     height: 100px;
     background-color: #68A4C4;
@@ -81,19 +98,106 @@ html, body {
 }
 
 .news_text{
-    font-size: 10px;
+    font-size: 15px;
     text-align: center;
     position: absolute;
-    top: 60px;
+    top: 85px;
     color: darkgray;
     left: 10px;
     right: 10px;
 }
 
+@media (max-width: 1135px) {
+    .news {
+        width: 200px;
+        height: 200px;
+    }
+
+    .news-footer {
+        font-size: initial;
+        line-height: 37px;
+        height: 38px;
+    }
+
+}
+
+@media (max-width: 1110px) {
+    .news {
+        width: 180px;
+        height: 180px;
+    }
+
+    .news_text{
+        top: 70px;
+    }
+
+    .news-footer {
+        line-height: 37px;
+        height: 37px;
+    }
+
+}
+
+@media (max-width: 910px) {
+    .news {
+        width: 160px;
+        height: 160px;
+    }
+
+    .news_text{
+        top: 60px;
+    }
+
+    .news-footer {
+        line-height: 35px;
+        height: 36px;
+    }
+
+}
+
+@media (max-width: 825px) {
+    .news {
+        width: 140px;
+        height: 140px;
+    }
+
+    .news_text{
+        font-size: 13px;
+        top: 50px;
+    }
+
+    .news-footer {
+        line-height: 35px;
+        height: 35px;
+    }
+
+}
+
+
+
 @media (max-width: 768px) {
+
+    .content{
+        width: 90%;
+    }
+
+    .news_last{
+        float: none;
+    }
+
+    .news_first{
+        float: none;
+    }
+    .news_second{
+        margin-right: 0px;
+    }
+    .news_third{
+        margin-left: 0px;
+    }
+
     .news {
         display: block;
-        width: auto;
+        width: 100%;
         margin-top: 20px;
     }
 
@@ -110,10 +214,12 @@ html, body {
 
 @media (max-width: 430px) {
     .content{
-        padding: 0px;
+        min-width: 280px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     .text{
-        padding: 0px 5px;
+        padding: 0px 15px;
     }
     .header_image {
         height: 150px;
@@ -121,16 +227,3 @@ html, body {
 
 }
 
-@media (min-width: 900px) {
-    .news {
-        margin-right: 20px;
-        width: 200px;
-        height: 200px;
-    }
-    .news_text{
-        font-size: 15px;
-        top: 80px;
-        color: darkgray;
-    }
-
-}
