--- a/task7/styles/adapt-fotos.css
+++ b/task7/styles/adapt-fotos.css
@@ -3,6 +3,7 @@ html, body {
 }
 
 .image-block {
+    max-width: 1200px;
     text-align: center;
 }
 
@@ -13,37 +14,90 @@ html, body {
     height: auto;
 }
 
-@media  (min-width: 1372px){
-    .image{
-        width: 400px;
-    }
-}
 
-@media  (min-width: 981px){
+
+@media  (min-width: 980px){
+    .image-block{
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
     .image{
         width: 300px;
-        max-width: 1200px;
+    }
+    .ten-image{
+        display: none;
+    }
+}
+
+@media  (max-width: 980px){
+    .image-block{
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+    .image{
+        width: 280px;
+    }
+    .ten-image{
+        visibility: hidden;
+    }
+}
+
+@media  (max-width: 920px){
+    .image-block{
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+    .image{
+        width: 230px;
+    }
+    .ten-image{
+        visibility: hidden;
+    }
+}
+
+@media  (max-width: 768px){
+    .image-block{
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+    .image{
+        width: 280px;
+    }
+    .ten-image{
+        visibility: hidden;
+    }
+}
+
+@media  (max-width: 620px){
+    .image-block{
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+    .image{
+        width: 220px;
+    }
+    .ten-image{
+        visibility: hidden;
+    }
+}
+
+@media  (max-width: 620px){
+    .image-block{
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+    .image{
         min-width: 320px;
+        width: 90%;
+    }
+    .ten-image{
+        visibility: hidden;
     }
 }
 
-@media (max-width: 980px){
-    .image{
-        width: 236px;
-        margin: 2px 5px;
-    }
-
-}
-
-@media (max-width: 768px){
-    .image{
-        width: 240px;
-        margin: 0px 1px;
-    }
-}
-
-@media (max-width: 480px){
-    .image{
-        width: 390px;
-    }
-}
