--- a/taskFinal/css/header.css
+++ b/taskFinal/css/header.css
@@ -77,3 +77,11 @@ i.icons-header{
 .schedule__text a{
     font-size: 15px;
 }
+
+a.month{
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    font-size: 5px;
+    line-height: 10px;
+}
