--- a/taskFinal/css/main.css
+++ b/taskFinal/css/main.css
@@ -38,7 +38,7 @@ a {
     position: relative;
     min-height: 866px;
     width: 100%;
-    background: url("../images/main-road-compressor.jpg") center no-repeat;
+    background: url("../images/road.jpg") center no-repeat;
 }
 
 
