finished main page

--- a/taskFinal/css/header.css
+++ b/taskFinal/css/header.css
@@ -51,7 +51,8 @@ i.icons-header{
     color: red;
 }
 
-.header-text{
+a.header-text.header-text{
+    color: whitesmoke;
     font-size: 15px;
 }
 
