--- a/taskFinal/css/specials.css
+++ b/taskFinal/css/specials.css
@@ -21,28 +21,35 @@
     transform: scale(1.2);
 }
 
+.car-item:hover .parent-wrapper,
+.car-item:focus .parent-wrapper {
+    transform: scale(1.15);
+}
+
 .parent-wrapper{
     display: flex;
-    flex-direction: column-reverse;
     width: 100%;
     height: 100%;
     transition: all .5s;
 }
 
 .special-car1 {
+    flex-direction: column-reverse;
     height: 100%;
     background: url("../images/special-car/spec-car-1.jpg") no-repeat center;
     background-position-x: 33%;
 }
 
 .special-car2 {
-    transition: all .5s;
+    flex-direction: column-reverse;
     background: url("../images/special-car/spec-car-2.jpg") no-repeat center;
     background-position-x: 40%;
     background-position-y: 55%;
 }
 
 .special-car3 {
+
+    flex-direction: column-reverse;
     background: url("../images/special-car/spec-car-3.jpg") no-repeat center;
     background-position-x: 58%;
     background-position-y: 83%
@@ -50,6 +57,7 @@
 }
 
 .special-car4 {
+    flex-direction: column-reverse;
     background: url("../images/special-car/spec-car-4.jpg") no-repeat center;
     background-position-x: 28%;
 }
