--- a/taskFinal/css/specials.css
+++ b/taskFinal/css/specials.css
@@ -26,6 +26,12 @@
     transform: scale(1.15);
 }
 
+
+.parent:hover .child:before,
+.parent:focus .child:before {
+    display: block;
+}
+
 .parent-wrapper{
     display: flex;
     width: 100%;
