--- a/taskFinal/css/clients-says.css
+++ b/taskFinal/css/clients-says.css
@@ -6,8 +6,7 @@
 .clients__text {
     width: 500px;
     height: 100%;
-    border: 2px solid red;
-    font-size: 43px;
+    font-size: 39px;
     color: red;
     text-align: left;
     font-weight: 700;
@@ -39,7 +38,6 @@
 .clients__logos {
     width: 500px;
     height: 100%;
-    border: 2px solid red;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -50,8 +48,43 @@
 
 .logo-item{
     width:150px;
-    height: 100px;
+    height: 150px;
     margin: 10px;
+
+}
+
+.logo1{
+    background: url("../images/logos/logo3.png") no-repeat center;
+}
+
+.logo2{
+    background: url("../images/logos/logo2.png") no-repeat center;
+}
+
+.logo3{
+    background: url("../images/logos/marketstreetpub.png") no-repeat center;
+}
+
+.logo4{
+    background: url("../images/logos/logo-4.png") no-repeat center;
+}
+
+.logo5{
+    background: url("../images/logos/logo5.png") no-repeat center;
+}
+
+.logo6{
+    background: url("../images/logos/logo6.png") no-repeat center;
+}
+
+.logo-item:hover .parent-wrapper,
+.logo-item:focus .parent-wrapper {
+    transform: scale(1.3);
+}
+
+.feedback-face-item:hover .parent-wrapper,
+.feedback-face-item:focus .parent-wrapper {
+    transform: scale(2);
 }
 
 .feedback-faces{
