--- a/taskFinal/css/about-us.css
+++ b/taskFinal/css/about-us.css
@@ -1,4 +1,4 @@
-.about-us-flex{
+.about-us-flex {
     display: flex;
     width: 100%;
     height: 100%;
@@ -7,34 +7,33 @@
     flex-wrap: wrap;
 }
 
-
-.about-item{
-    width:25%;
+.about-item {
+    width: 25%;
     height: auto;
     border: 2px solid red;
 }
 
-.about-company{
-
+.about-company {
+    padding: 20px;
 }
 
-.photo-gallery{
+.photo-gallery {
 }
 
-.latest-posts{
+.latest-posts {
 }
 
-.social-net{
+.social-net {
 }
 
-.contacts{
+.contacts {
 }
 
-.sales-hours{
+.sales-hours {
     position: relative;
 }
 
-.subscribe{
+.subscribe {
     position: absolute;
     bottom: 10px;
     height: 60px;
@@ -42,17 +41,30 @@
     border: 2px solid red;
 }
 
-.service-hours{
+.service-hours {
 }
 
-.parts-hours{
+.parts-hours {
     position: relative;
 }
 
-.search-row{
+.search-row {
     position: absolute;
     bottom: 10px;
     height: 60px;
     width: 100%;
     border: 2px solid red;
+}
+
+.title {
+    font-size: 20px;
+    font-weight: 500;
+    color: white;
+}
+
+.about-us-text {
+    font-size: 12px;
+    color: white;
+    font-style: italic;
+    line-height: 10px;
 }
