--- a/taskFinal/css/main.css
+++ b/taskFinal/css/main.css
@@ -34,6 +34,11 @@ a {
     width: 100%;
 }
 
+.fixed{
+    position: fixed;
+    top: 10px;
+}
+
 .main-page {
     position: relative;
     min-height: 866px;
