--- a/taskFinal/css/about-us.css
+++ b/taskFinal/css/about-us.css
@@ -2,22 +2,30 @@
     display: flex;
     width: 100%;
     height: 100%;
-    border: 2px solid green;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
 .about-item {
+    padding: 20px;
     width: 25%;
     height: auto;
-    border: 2px solid red;
 }
 
 .about-company {
-    padding: 20px;
 }
 
 .photo-gallery {
+    position: relative;
+}
+
+.images {
+    top: 80px;
+    height: 60px;
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .latest-posts {
@@ -27,6 +35,37 @@
 }
 
 .contacts {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.contact-item {
+    width: 100%;
+    height: auto;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 25px;
+}
+
+.contact-item__text {
+    padding-left: 10px;
+    color: white;
+    font-size: 12px;
+}
+
+.contact-item__icon i.fa {
+    font-size: 24px;
+}
+
+.contact-item__icon i.fa-map-marker {
+    font-size: 32px;
+}
+
+.contact-item__icon i.fa-phone {
+    font-size: 32px;
 }
 
 .sales-hours {
@@ -38,7 +77,6 @@
     bottom: 10px;
     height: 60px;
     width: 100%;
-    border: 2px solid red;
 }
 
 .service-hours {
@@ -48,15 +86,8 @@
     position: relative;
 }
 
-.search-row {
-    position: absolute;
-    bottom: 10px;
-    height: 60px;
-    width: 100%;
-    border: 2px solid red;
-}
-
 .title {
+    margin: 20px 0px;
     font-size: 20px;
     font-weight: 500;
     color: white;
@@ -66,5 +97,59 @@
     font-size: 12px;
     color: white;
     font-style: italic;
-    line-height: 10px;
+    line-height: 20px;
+}
+
+.gal-item {
+    width: 23%;
+    height: 100%;
+}
+
+.gal-item img {
+    height: 100%;
+    width: 100%;
+}
+
+.youtube {
+    font-size: 41px;
+    color: white;
+    background: red;
+    text-align: center;
+}
+
+.youtube a:hover, a:active, a:visited {
+    color: white;
+}
+
+.facebook {
+    font-size: 35px;
+    color: white;
+    text-align: center;
+    background-color: gray;
+    padding-top: 6px;
+}
+
+.twitter {
+    font-size: 35px;
+    color: white;
+    text-align: center;
+    background-color: gray;
+    padding-top: 6px;
+}
+
+.insta {
+    font-size: 35px;
+    color: white;
+    text-align: center;
+    background-color: gray;
+    padding-top: 6px;
+}
+
+.hours-text {
+    font-size: 11px;
+    color: white;
+}
+
+.dimgray-color.dimgray-color.dimgray-color {
+    color: dimgray;
 }
