--- a/taskFinal/css/clients-says.css
+++ b/taskFinal/css/clients-says.css
@@ -16,8 +16,10 @@
 .clients-says p.title{
     line-height: 35px;
     margin-top: 75px;
-    font-size: 39px;
+    font-size: 51px;
     color: red;
+    font-family: 'Pathway Gothic One', sans-serif;
+    font-weight: 900;
 }
 
 .feedback{
