--- a/taskFinal/css/our-car.css
+++ b/taskFinal/css/our-car.css
@@ -179,6 +179,7 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #E03637;
+    margin-bottom: 40px;
 }
 
 .view-all a.text {
