--- a/taskFinal/css/media.css
+++ b/taskFinal/css/media.css
@@ -36,10 +36,9 @@
     .phones {
         display: none;
     }
+
     /******************************************/
-
     /*SPECIALS8*/
-
     .discount {
         height: 70px;
         width: 41%;
@@ -65,27 +64,51 @@
     .small-rows-text a.row-second {
         font-size: 16px;
     }
-    /******************************************/
 
+    /******************************************/
     /*Section header rows - grey and red*/
-    .right-line_red{
+    .right-line_red {
         width: 100px;
     }
 
-    .left-line_red{
+    .left-line_red {
         margin-left: -167px;
         width: 100px;
     }
 
-    .our-car-title-after{
+    .our-car-title-after {
         font-size: 17px;
     }
+
     /******************************************/
+    .cars-block {
+        width: 1000px;
+    }
+
+    .first-extended .discount {
+        width: 100%;
+    }
 
 }
 
+@media (max-width: 1100px) {
+    .special-cars .special-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .special-cars .parent-wrapper {
+        height: 22%;
+    }
+
+    .special-cars .carousel-item .parent-wrapper {
+        width: 100%;
+    }
+}
+
 @media (max-width: 1000px) {
-    .main-page__text{
+    .main-page__text {
         left: 50%;
         transform: translate(-50%);
         top: 20px;
@@ -94,192 +117,265 @@
     .main-page__text__description {
         display: none;
     }
-    .main-page__text__learnmore{
+
+    .main-page__text__learnmore {
         display: none;
     }
 
-    .main-page__car{
+    .main-page__car {
         transform: scale(1.0);
     }
 
-    .main-page__form{
+    .main-page__form {
         transform: scale(0.9);
         top: 27px;
         left: 122px;
         width: 600px;
     }
 
-    .schedule{
+    .schedule {
         display: none;
     }
 
-    .slide{
+    .carousel-wrapper {
         display: none;
     }
 
-    .main-page__car{
+    .main-page__car {
         visibility: inherit;
     }
 
-    .carousel-control-prev{
+    .carousel-control-prev {
         display: none;
     }
 
-    .carousel-control-next{
+    .carousel-control-next {
         display: none;
+    }
+
+    .cars-block {
+        width: 750px;
     }
 }
 
-@media  (max-width: 870px){
-    .special-cars{
+@media (max-width: 870px) {
+    .special-cars {
         margin-left: auto;
         flex-direction: column;
         align-items: center;
     }
-    .schedule__text a{
+
+    .schedule__text a {
 
     }
 
-    .location{
+    .location {
         display: none;
     }
 }
 
-
-@media  (max-width: 768px){
-    .main-page__car{
+@media (max-width: 768px) {
+    .main-page__car {
         left: -35px;
         transform: scale(0.8)
     }
 
-    .main-page__form{
+    .main-page__form {
         transform: scale(0.8);
         top: 20px;
         left: -17px;
         /* width: 738px; */
         /* height: 500px; */
     }
-    .cars-block{
-        justify-content: center;
+
+    .cars-block {
+        width: 550px;
     }
 
-    .car-text{
+    .car-text {
+        overflow: hidden;
+    }
+
+    .description {
         overflow: auto;
     }
 
-    .description{
-        overflow: auto;
-    }
-
-    .clients{
+    .clients {
         flex-direction: column;
     }
 
-    .about-item{
+    .about-item {
         width: 50%;
     }
 
-
-    .right-line_red{
+    .right-line_red {
         display: none;
     }
 
-    .left-line_red{
+    .left-line_red {
         display: none;
     }
 
-    .main-page__text__title.main-page__text__title a{
+    .main-page__text__title.main-page__text__title a {
         font-size: 20px;
     }
 
 }
 
 @media (max-width: 654px) {
-    .main-page__car{
+    .main-page__car {
         transform: scale(0.7);
         left: -13%;
     }
-    .main-page__text{
+
+    .main-page__text {
         width: 300px;
         height: auto;
     }
-    .our-car-title{
-       font-size: 40px;
+
+    .our-car-title {
+        font-size: 40px;
     }
-    .our-car-title-after{
+
+    .our-car-title-after {
         letter-spacing: 5px;
     }
 
-    .red_left{
-        display: none;
-    }
-    .red_rigth{
+    .red_left {
         display: none;
     }
 
-    .why-item .description{
+    .red_rigth {
         display: none;
     }
 
-    .why-us-flex-wrapper{
+    .why-item .description {
+        display: none;
+    }
+
+    .why-us-flex-wrapper {
         flex-direction: column;
         align-items: center;
+        margin-top: 15px;
     }
 
-    .why-item{
+    .why-item {
         width: 100%;
         flex-direction: row;
     }
 
-    .why-item .image{
-        transform: scale(0.7);
+    .why-item .image {
+        height: auto;
+        transform: scale(0.6);
         margin-top: 0px;
     }
 
-    .title{
-       margin-top: 44px;
-        margin-bottom: 44px;
+    .title {
+        margin: 0px 0px;
         margin-right: 100px;
     }
 }
 
 @media (max-width: 550px) {
-    .main-page__car{
+    .main-page__car {
         transform: scale(0.5);
         left: -13%;
     }
 
-    .main-page__form{
+    .main-page__form {
         transform: scale(0.7);
+    }
+
+    .cars-block {
+        width: 500px;
     }
 
 }
 
 @media (max-width: 500px) {
 
-    .main-page__form{
+    .main-page__form {
         width: 90%;
+    }
+
+    .cars-block {
+        width: 400px;
+    }
+
+    #footer a {
+        padding: 0 5px;
     }
 
 }
 
-@media  (max-width: 450px){
-    .main-page__form{
+@media (max-width: 450px) {
+    .main-page__form {
         height: 510px;
         width: 400px;
         left: 11px;
         top: 2%;
     }
 
-    .about-item{
+    .about-item {
         width: 100%;
     }
 
-    .main-page__car{
-        left:-27%;
+    .main-page__car {
+        left: -27%;
+    }
+
+    .cars-block {
+        width: 350px;
+    }
+
+    .why-item .title {
+        margin-right: 15%;
+        font-size: 15px;
+    }
+
+    .discount {
+        height: 50%;
+        width: 41%;
     }
 
 }
+
+@media (max-width: 380px) {
+    .cars-block {
+        width: 280px;
+    }
+
+    .main-page__car {
+        left: -44%;
+    }
+
+    .main-page__form {
+        left: -32px;
+    }
+
+    .question-block .car-text p.text {
+        display: none;
+    }
+}
+
+@media (max-width: 340px) {
+    .cars-block {
+        width: 280px;
+    }
+
+    .main-page__car {
+        left: -49%;
+    }
+
+    .main-page__form {
+        left: -40px;
+    }
+
+    .why-item .title {
+        font-size: 15px;
+    }
+}
+
 
 
 
